remove exec nodemon

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,3 +7,5 @@ html(lang="en")
     body
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem fugit maiores temporibus tempora accusamus vero dolorum labore, ipsam laborum consequatur ipsa voluptatum omnis et mollitia. Expedita similique laboriosam id ab.
 
+        p asasdasd
+        p asasdasd
