--- a/src/index.pug
+++ b/src/index.pug
@@ -9,3 +9,5 @@ html(lang="en")
 
         p asasdasd
         p asasdasd
+        img(src="img/img-1.png", alt="")
+        p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci saepe dicta laborum dolorum omnis quisquam. Neque rem quo possimus nisi excepturi a odio ratione, explicabo, ducimus placeat id non commodi!
