--- a/src/pug/config/template.pug
+++ b/src/pug/config/template.pug
@@ -3,15 +3,16 @@ block config
 doctype html
 html(lang="es")
   head
-    title My awesome title
+    title= global.siteName
     meta(charset="utf-8")
     meta(name="viewport" content="initial-scale=1.0, width=device-width")
     meta(name="twitter:card" content="summary_large_image")
-    meta(name="twitter:site" content=twitterAccount)
-    meta(property="og:title" content=pageTitle)
-    meta(property="og:description" content=pageDescription)
-    meta(property="og:image" content=pageImage)
+    meta(name="twitter:site" content=global.twitterAccount)
+    meta(property="og:title" content=global.pageTitle)
+    meta(property="og:description" content=global.pageDescription)
+    meta(property="og:image" content=global.pageImage)
 
   body
+    p= global.siteName
     block main
 
