global variables error resolved

--- a/src/pug/includes/main-menu.pug
+++ b/src/pug/includes/main-menu.pug
@@ -1,10 +1,10 @@
 //- include ../config/variables
 nav.main-menu(itemscope itemtype="http://schema.org/SiteNavigationElement" role="navigation")#main-menu
   ul
-    each page in global.pages
+    - for(let page of global.pages)
       li.main-menu__item(itemprop="url")
           a.main-menu__link(href=page.url itemprop="name")= page.title
-            if page.child.length > 0
+            - if(page.child.length > 0)
                 ul
-                  each page2 in page.child
-                    li: a(href= page2.url)= page2.title
+                  - for( let page2 of page.child)
+                      li: a(href= page2.url)= page2.title
